--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "mongoose": "^5.9.6",
     "mongose": "0.0.2-security",
     "nodemon": "^2.0.2",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-facebook-token": "^3.3.0",
     "path": "^0.12.7"
   }
 }
