--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "csv-writer": "^1.6.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
